NetBSD Problem Report #50048

From martin@duskware.de  Tue Jul 14 11:49:25 2015
Return-Path: <martin@duskware.de>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 6D8D2A567D
	for <gnats-bugs@gnats.NetBSD.org>; Tue, 14 Jul 2015 11:49:25 +0000 (UTC)
From: martin@NetBSD.org
Reply-To: martin@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: ntpd startup errors
X-Send-Pr-Version: 3.95

>Number:         50048
>Category:       bin
>Synopsis:       ntpd startup errors
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Jul 14 11:50:00 +0000 2015
>Closed-Date:    Mon Aug 21 08:29:31 +0000 2017
>Last-Modified:  Mon Aug 21 08:29:31 +0000 2017
>Originator:     Martin Husemann
>Release:        NetBSD 7.99.20
>Organization:
The NetBSD Foundation, Inc.
>Environment:
System: NetBSD unpluged.duskware.de 7.99.20 NetBSD 7.99.20 (UNPLUGED) #76: Tue Jul 14 12:03:37 CEST 2015 martin@seven-days-to-the-wolves.aprisoft.de:/ssd/src/sys/arch/evbarm/compile/UNPLUGED evbarm
Architecture: earm
Machine: evbarm
>Description:

Since the new ntpd has been imported, it complains at startup:

Jul 14 13:42:35 unpluged ntpd[1558]: error waiting on child 1500: No child processes

I see this on all machines running -current.

>How-To-Repeat:
Boot a current machine with ntpd enabled.

>Fix:
n/a

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50048 CVS commit: src/external/bsd/ntp/dist/libntp
Date: Fri, 17 Jul 2015 11:17:07 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Fri Jul 17 15:17:07 UTC 2015

 Modified Files:
 	src/external/bsd/ntp/dist/libntp: work_fork.c

 Log Message:
 PR/50048: Martin Husemann: Avoid reaping the child twice by setting c->pid = 0
 after the wait.


 To generate a diff of this commit:
 cvs rdiff -u -r1.5 -r1.6 src/external/bsd/ntp/dist/libntp/work_fork.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Martin Husemann <martin@netbsd.org>
To: Christos Zoulas <christos@netbsd.org>
Cc: gnats-bugs@NetBSD.org
Subject: Re: bin/50048: ntpd startup errors
Date: Mon, 20 Jul 2015 07:47:56 +0000

 On Fri, Jul 17, 2015 at 11:17:07AM -0400, Christos Zoulas wrote:
 > Module Name:	src
 > Committed By:	christos
 > Date:		Fri Jul 17 15:17:07 UTC 2015
 > 
 > Modified Files:
 > 	src/external/bsd/ntp/dist/libntp: work_fork.c
 > 
 > Log Message:
 > PR/50048: Martin Husemann: Avoid reaping the child twice by setting c->pid = 0
 > after the wait.

 I still see the message (with non zero pid).

 Martin

From: christos@zoulas.com (Christos Zoulas)
To: Martin Husemann <martin@netbsd.org>
Cc: gnats-bugs@NetBSD.org
Subject: Re: bin/50048: ntpd startup errors
Date: Mon, 20 Jul 2015 08:17:31 -0400

 On Jul 20,  7:47am, martin@netbsd.org (Martin Husemann) wrote:
 -- Subject: Re: bin/50048: ntpd startup errors

 | On Fri, Jul 17, 2015 at 11:17:07AM -0400, Christos Zoulas wrote:
 | > Module Name:	src
 | > Committed By:	christos
 | > Date:		Fri Jul 17 15:17:07 UTC 2015
 | > 
 | > Modified Files:
 | > 	src/external/bsd/ntp/dist/libntp: work_fork.c
 | > 
 | > Log Message:
 | > PR/50048: Martin Husemann: Avoid reaping the child twice by setting c->pid = 0
 | > after the wait.
 | 
 | I still see the message (with non zero pid).

 Are you sure, because I don't and I also don't see how it can happen now.

 christos

From: Martin Husemann <martin@duskware.de>
To: Christos Zoulas <christos@zoulas.com>
Cc: gnats-bugs@NetBSD.org
Subject: Re: bin/50048: ntpd startup errors
Date: Mon, 20 Jul 2015 14:48:08 +0200

 On Mon, Jul 20, 2015 at 08:17:31AM -0400, Christos Zoulas wrote:
 > Are you sure, because I don't and I also don't see how it can happen now.

 I checked - I have work_fork.c up to date, work_fork.o, libntp.a and ntpd
 have been rebuild/linked, "make install" in external/bsd/ntp does not
 install anything new.

 But actually I get the message reproducably on "/etc/rc.d/ntpd stop",
 but also once at boot time.


 Martin

State-Changed-From-To: open->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Mon, 21 Aug 2017 08:29:31 +0000
State-Changed-Why:
Can not reproduce this any more


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.