PR/50048: Martin Husemann: Avoid reaping the child twice by setting c->pid = 0 after the wait.